--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,9 +19,18 @@ Place your fingertip on the Home button to verify your identity
     <string name="admin">9</string>
     <string name="seller">1</string>
 
+    <string name="senderName">easystock2021@gmail.com</string>
+    <string name="senderSecret">asdf1234#</string>
 
     <string name="acept">Aceptar</string>
     <string name="update">Modificar</string>
+    <string name="title_activity_recovery_password">RecoveryPasswordActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 
 </resources>
