Before navigation Component

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,12 +25,13 @@ Place your fingertip on the Home button to verify your identity
     <string name="acept">Aceptar</string>
     <string name="update">Modificar</string>
     <string name="title_activity_recovery_password">RecoveryPasswordActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
+    <!-- Shared Preferences KEYS -->
+    <string name="sharedPreferencesKey">sharedPref_key</string>
+    <string name="currentUser_id">user_id</string>
+    <string name="currentUser_rol">user_rol</string>
+    <string name="currentUser_username">user_username</string>
 
 
 </resources>
