--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,23 @@ Place your fingertip on the Home button to verify your identity
     <string name="currentUser_rol">user_rol</string>
     <string name="currentUser_username">user_username</string>
 
+    <string name="user_id">user_id</string>
+    <string name="user_username">user_username</string>
+    <string name="user_name">user_name</string>
+    <string name="user_lastname">user_lastname</string>
+    <string name="user_password">user_password</string>
+    <string name="user_email">user_email</string>
+    <string name="user_phone">user_phone</string>
+    <string name="user_role">user_role</string>
+    <string name="user_fingerprint">user_fingerprint</string>
+    <string name="user_isLogged">isLogged</string>
 
+
+    <string name="plus_name" translatable="false">plus</string>
+    <string name="send_name" translatable="false">send</string>
+    <string name="done_name" translatable="false">done</string>
+    <string name="plus_path_data" translatable="false">M 5 11 L 11 11 L 11 5 L 13 5 L 13 11 L 19 11 L 19 12 L 19 13 L 19 13 L 13 13 L 13 19 L 11 19 L 11 13 L 5 13 L 5 11</string>
+    <string name="send_path_data" translatable="false">M 14.604 15.6 L 18.802 13.8 L 23 12 L 2.01 3 L 2 10 L 17 12 L 14 12.4 L 11 12.8 L 8 13.2 L 5 13.6 L 2 14 L 2.01 21 L 6.208 19.2 L 10.406 17.4 L 14.604 15.6</string>
+    <string name="done_path_Data" translatable="false">M 3.4 13.4 L 9 19 L 12 16 L 15 13 L 18 10 L 21 7 L 19.6 5.6 L 17.48 7.72 L 15.36 9.84 L 13.24 11.96 L 11.12 14.08 L 9 16.2 L 9 16.2 L 4.8 12 L 3.4 13.4</string>
+    <string name="title_activity_tags">TagsActivity</string>
 </resources>
